ContactView overflow fix

--- a/BirdieDotnetUITypeScript/src/components/chat/Contact.module.scss
+++ b/BirdieDotnetUITypeScript/src/components/chat/Contact.module.scss
@@ -1,14 +1,90 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
 $purple: #8C52FF;
+$lightPurple: #BB98FF;
 
+// create a contact card from scratch
 .contactCard {
     display: flex;
     align-items: center;
+    justify-content: space-between;
     padding: 1rem;
     gap:.3rem;
     height: fit-content;
-    width: fit-content;
+    
+    border-radius: 5px;
+    background-color: #fff;
+    text-indent: 15px;    
+
+    .contactDetails {
+        height: 100%;
+        justify-content: space-evenly;
+        display: flex;
+        flex: 6;
+        flex-direction: column;
+    
+        h2 {
+            margin: 0;
+            font-family: 'Roboto', sans-serif;
+            font-size: 16px;
+            font-weight: 300;
+        }
+    
+        h4 {
+            margin: 0;
+            font-family: 'Roboto', sans-serif;
+            font-size: 14px;
+            color: $lightPurple;
+            font-weight: 300;
+        }
+    }
+    
+    .propicWrapper {
+        display: inline-flex;
+        justify-content: center;
+        height: 50px;
+        width: 50px;
+        outline: 1px solid $purple;
+        border-radius: 50%;
+        .propic {
+            border-radius: 50%;
+            object-fit: cover; 
+            cursor: pointer;
+            height: 50px;
+            width: 50px;
+            path {
+                fill: grey;
+            }
+        }     
+    }
+
+    &:hover {
+        background-color: #ebeaea;
+    }
+
+    .messageInfo {
+        position: relative;
+        right: 9;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-end;
+        flex: 1;
+        gap: .7rem;
+        font-family: 'Roboto', sans-serif;
+        color: rgba(0, 0, 0, 0.5);
+    }
+}
+
+
+
+/* .contactCard {
+    display: flex;
+    align-items: center;
+    padding: .5rem;
+    gap:.3rem;
+    height: fit-content;
+    width: 100%;
     border-radius: 5px;
     background-color: #fff;
     text-indent: 15px;    
@@ -57,6 +133,8 @@ $purple: #8C52FF;
     }
 
     .messageInfo {
+        position: relative;
+        right: 9;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -66,4 +144,4 @@ $purple: #8C52FF;
         font-family: 'Roboto', sans-serif;
         color: rgba(0, 0, 0, 0.5);
     }
-}
+} */
