--- a/BirdieDotnetUITypeScript/src/components/chat/ContactView.module.scss
+++ b/BirdieDotnetUITypeScript/src/components/chat/ContactView.module.scss
@@ -4,20 +4,33 @@ $darkPurple: #6A2BFF;
 $lightGrey: rgba(0,0,0,0.2);
 $darkGrey: #E0E0E0;
 
+@mixin whenScreenAt($maxWidth) {
+  @media only screen and (max-width: $maxWidth) {
+    @content;
+  }
+}
+
 .contactView {
     display: flex;
     flex-direction: column;
     background-color: var(--block-bg-color);
     overflow: scroll; 
-    padding: 1rem;
-    gap: .5rem;
-    align-items: flex-start;
-    flex: 3;
+    flex: 4;
+    
+    @include whenScreenAt(768px) {
+      flex: 5;
+    }
+
+    @include whenScreenAt(1024px) {
+      flex: 6;
+    }
+
+    
 
     .searchCard {
       display: flex;
       align-items: center;
-      width: 100%;
+      padding: 1rem;
       flex-shrink: 0;
 
       .searchField {
@@ -26,8 +39,6 @@ $darkGrey: #E0E0E0;
         padding: 1rem;
         border-radius: 5px;
         border: 2px solid rgba(0, 0, 0, 0.2);
-
-
 
         &:focus {
           outline: none;
@@ -41,21 +52,15 @@ $darkGrey: #E0E0E0;
       
     }
 
-
-    
     .divider  {
-        width: 80%;
-        border-color: rgb(255, 255, 255);
+      width: 80%;
+      border-color: rgb(255, 255, 255);
     }
 
     .contactList {
         display: flex;
         flex-direction: column;
-        align-items: flex-start;
-        width: 100%;
-        gap: .5rem;
-        flex: 1;
-        overflow-y: scroll;
+        flex-grow: 1;
+        overflow: scroll;
     }
-
   }
