--- a/BirdieDotnetUITypeScript/src/pages/ChatInterfacePage.module.scss
+++ b/BirdieDotnetUITypeScript/src/pages/ChatInterfacePage.module.scss
@@ -6,5 +6,5 @@
     display: flex;
     flex-direction: column;
     height: 100vh;
-    width: calc(100vw - 4rem);
+    max-width: calc(100vw - 4rem);
 }
